src/test/deca/syntax/valid/SansObjet/OrExpr2-Multiple.deca
// Description:
//    Multiple Or expressions.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        x ||3 || y||5;
}
