src/test/deca/syntax/invalid/SansObjet/Literal7-Null.deca
// Description:
//    Null literal.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        x = null;
}
